WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221906
Crash under WorkerThreadableLoader::MainThreadBridge::notifyIsDone()
https://bugs.webkit.org/show_bug.cgi?id=221906
Summary
Crash under WorkerThreadableLoader::MainThreadBridge::notifyIsDone()
Chris Dumez
Reported
2021-02-15 10:03:26 PST
Crash under WorkerThreadableLoader::MainThreadBridge::notifyIsDone(): 13 WebCore: WebCore::WorkerThreadableLoader::MainThreadBridge::notifyIsDone(bool) <== 13 WebKit: WTF::Detail::CallableWrapper<WTF::CompletionHandler<void (bool)>, void, bool&&>::call(bool&&) 13 WebKit: Messages::NetworkConnectionToWebProcess::IsResourceLoadFinished::callReply(IPC::Decoder&, WTF::CompletionHandler<void (bool&&)>&&) 13 WebKit: WTF::Detail::CallableWrapper<void IPC::Connection::sendWithAsyncReply<Messages::NetworkConnectionToWebProcess::IsResourceLoadFinished, WTF::CompletionHandler<void (bool)> >(Messages::NetworkConnectionToWebProcess::IsResourceLoadFinished&&, WTF::CompletionHandler<void (bool)>&&, unsigned long long, WTF::OptionSet<IPC::SendOption>)::'lambda'(IPC::Decoder*), void, IPC::Decoder*>::call(IPC::Decoder*) 13 WebKit: IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 13 WebKit: WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_7, void>::call() 13 JavaScriptCore: WTF::RunLoop::performWork()
Attachments
Patch
(6.09 KB, patch)
2021-02-15 10:29 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-02-15 10:03:37 PST
<
rdar://74225448
>
Chris Dumez
Comment 2
2021-02-15 10:29:48 PST
Created
attachment 420329
[details]
Patch
EWS
Comment 3
2021-02-15 14:16:24 PST
Committed
r272880
: <
https://commits.webkit.org/r272880
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 420329
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug